명함이름 변경

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <div class="avatar__inner" id="avatarInitials">HK</div>
             </div>
             <div class="identity">
-              <h1 class="identity__name" id="fullName">홍길동</h1>
+              <h1 class="identity__name" id="fullName">황길동</h1>
               <p class="identity__title" id="jobTitle">
                 시스템 엔지니어 · 인프라 아키텍트
               </p>
