--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="identity">
               <h1 class="identity__name" id="fullName">황길동</h1>
               <p class="identity__title" id="jobTitle">
-                시스템 엔지니어 · 인프라 아키텍트
+                보안네트워크 엔지니어, 시스템 개발자
               </p>
               <p class="identity__company" id="companyName">ACME SYSTEMS CO.</p>
             </div>
